--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 color: '#555555'
             },
             server: {
-                url: 'ws://localhost:3000'
+                url: 'wss://shellshock-arena-production.up.railway.app'
             }
         };
 
