--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 smoothness: 0.1
             },
             server: {
-                url: 'ws://localhost:3000'
+                url: 'wss://shellshock-arena-production.up.railway.app'
             }
         };
 
